# drf-body-token

./: .gitignore  README.rst  pyproject.toml
drf_body_token/: authentication.py
tests/: settings.py  test_drf_body_token.py  urls.py  views.py
